feat(app): add banner to Models page

--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="main-menu">
   <div class="main-menu-container">
     <div class="left-section">
-      <div class="site-log">AviaMaker</div>
+      <img class="logo" src="/assets/images/lufthansa-w.svg">
     </div>
   
     <div class="center-section">
@@ -11,7 +11,6 @@
           class="navigation-item"
           [routerLink]="navigationItem.route"
           routerLinkActive="active"
-          [routerLinkActiveOptions]= "{exact: true}"
         >
           <img class="navigation-item-icon" [src]="navigationItem.icon">
           <img class="navigation-item-active-icon" [src]="navigationItem.activeIcon">
