--- a/src/app/components/main-page/main-page.component.scss
+++ b/src/app/components/main-page/main-page.component.scss
@@ -1,20 +1,66 @@
 
 
 :host {
-  width: 1120px;
-
-  margin: 0 auto;
+  width: 100%;
 
   margin-bottom: 15px;
 }
 
-.factory-selector {
-  width: 700px;
+.banner {
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+}
+
+.banner-section {
+  height: 400px;
+  width: 1120px;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
+  position: relative;
+  z-index: 10;
 
   margin: 0 auto;
+}
+
+.banner-text {
+  margin-left: 65px;
+
+  h1 {
+    font-size: 80px;
+  }
+  p {
+    font-size: 18px;
+  }
+}
+
+.content {
+  width: 1120px;
+  position: relative;
+  z-index: 10;
+
+  background-color: white;
+  border-radius: 20px;
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.05);
+  padding: 35px 45px;
+  margin: 0 auto;
+}
+
+.content-header {
+  margin-bottom: 30px;
+
+  font-size: 30px;
+  font-weight: 500;
+}
+
+.factory-selector {
+  // width: 700px;
+  display: flex;
+  flex-wrap: wrap;
+  // justify-content: center;
+
+  // margin: 0 auto;
   margin-bottom: 15px;
 }
 
@@ -23,15 +69,19 @@
   align-items: center;
 
   padding: 6px 15px;
-  border: 2px solid black;
+  border: 2px solid var(--bg-dark-color);
   border-radius: 20px;
   margin-right: 15px;
-  margin-bottom: 8px;
+  margin-bottom: 10px;
 
   cursor: pointer;
 
   &.active {
     color: var(--link-color);
+    border-color: var(--link-color);
+  }
+
+  &:hover {
     border-color: var(--link-color);
   }
 
@@ -49,22 +99,32 @@
 .gallery {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
+  gap: 25px;
 }
 
 .gallery-item {
   display: flex;
   flex-direction: column;
 
+  border: 2px solid var(--bg-dark-color);
+  border-radius: 10px;
+  padding: 20px;
+
   cursor: pointer;
 
   &:hover {
+    border-color: var(--link-color);
+
     color: var(--link-color);
+
+    .model-name, .model-articul {
+      color: var(--link-color);
+    }
   }
 }
 
 .model-preview {
-  width: 75%;
+  width: 100%;
   height: 160px;
   object-fit: contain;
   object-position: center;
