--- a/src/app/components/app/app.component.scss
+++ b/src/app/components/app/app.component.scss
@@ -66,7 +66,9 @@
   &.active {
     border-bottom: 2px solid var(--link-color);
 
-    color: var(--link-color);
+    .navigation-item-text {
+      color: var(--link-color);
+    }
 
     .navigation-item-icon {
       display: none;
