--- a/src/app/components/app/app.component.scss
+++ b/src/app/components/app/app.component.scss
@@ -3,10 +3,9 @@
 :host {
   width: 100%;
   min-height: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: flex-start;
 
   background-color: var(--bg-color);
