feat(app): add `Model` page

--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,11 +1,8 @@
-<img class="banner" src="/assets/images/banner.png">
-
-<div class="banner-section">
-  <div class="banner-text">
-    <h1>Авиамодели</h1>
-    <p>Первое, что может полететь</p>
-  </div>
-</div>
+<app-banner
+  title="Авиамодели"
+  subtitle="Первое, что может полететь"
+  img="/assets/images/banner.png"
+></app-banner>
 
 <div class="content">
   <div class="content-header">
