--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,8 @@
   --bg-color: #f5f7fb;
   --bg-dark-color: #e5e7eb;
   --link-color: #e41c0d;
-  --text-color: #252944;
+  --text-color: #121521;
+  --light-text-color: #8b8ea3;
   --main-color: #ffc73b;
   --main-dark-color: #f9c035;
   --main-hover-color: #f9c035;
