feat(app): add 404 page

--- a/src/app/components/how-to-make-page/how-to-make-page.component.scss
+++ b/src/app/components/how-to-make-page/how-to-make-page.component.scss
@@ -15,7 +15,7 @@
   margin: 0 auto;
 }
 
-$line-color: #c16262;
+$line-color: var(--ligth-link-color);
 .step {
   counter-increment: section;
   position: relative;
