--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
   --bg-color: #f5f7fb;
   --bg-dark-color: #e5e7eb;
   --link-color: #e41c0d;
+  --ligth-link-color: #c16262;
   --text-color: #121521;
   --light-text-color: #8b8ea3;
   --main-color: #ffc73b;
