feat(cmps): add `Achievements` page

--- a/src/app/components/not-found-page/not-found-page.component.html
+++ b/src/app/components/not-found-page/not-found-page.component.html
@@ -1,10 +1,12 @@
 <div class="content">
-  <img class="page-not-found-img" src="/assets/images/NN2.png">
+  <img class="page-not-found-img" src="/assets/images/404.png">
   <div class="page-not-found-description">
-    <h1>Награды</h1>
+    Извините! Но страница которую вы ищите - не найдена.
     <br>
-    Я участвую во всех интернет-конкурсах, проводимых аккаунтами производителей моделей. За это мои модели постят у них на странице и отмечают в историях. Весной 2021 года моя модель Boeing 767-300 участвовала в онлайн-выставке моделей, и заняла первое место. За это я получил диплом, а также модель Ил-62М и каталог производителя Звезда на 2021 год. 
-    За участие в онлайн-конкурсах от Revell я получил каталог на 2020 год, а также 4 баночки краски.
+    Возможно мы ведём технические работы и она скоро появится.
   </div>
-  
+  <a
+    class="back-to-home-btn"
+    [routerLink]="['/models']"
+  >Вернуться на главную</a>
 </div>
