chore(app): replace assets

--- a/src/app/components/achievements-page/achievements-page.component.html
+++ b/src/app/components/achievements-page/achievements-page.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-  <img class="page-not-found-img" src="/assets/images/NN2.png">
+  <img class="page-not-found-img" src="assets/images/NN2.png">
   <div class="page-not-found-description">
     <h1>Награды</h1>
     <br>
