--- a/src/app/components/how-to-make-page/how-to-make-page.component.html
+++ b/src/app/components/how-to-make-page/how-to-make-page.component.html
@@ -1,7 +1,7 @@
 <!-- <app-banner
   [title]="'Как сделать?'"
   [subtitle]="''"
-  img="/assets/images/banner.png"
+  img="assets/images/banner.png"
 ></app-banner> -->
 
 <div class="content">
