--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,7 +1,7 @@
 <app-banner
   title="Авиамодели"
   subtitle="Первое, что может полететь."
-  img="/assets/images/banner.png"
+  img="assets/images/banner.png"
 ></app-banner>
 
 <div class="content">
