--- a/src/app/components/model-page/model-page.component.html
+++ b/src/app/components/model-page/model-page.component.html
@@ -1,14 +1,14 @@
 <app-banner
   [title]="model.name"
   [subtitle]="model.shortDescription"
-  img="/assets/images/banner.png"
+  img="assets/images/banner.png"
 ></app-banner>
 
 <div class="content">
   <div class="left-section">
     <div class="base-section info-section" *ngIf="model.description">
       <div class="base-header info-header">
-        <img class="specifications-icon" src="/assets/images/model/information.png">
+        <img class="specifications-icon" src="assets/images/model/information.png">
         Описание
       </div>
       <div class="info-body" [innerHTML]="model.description"></div>
@@ -16,7 +16,7 @@
 
     <div class="base-section gallery-section" *ngIf="model.galleryItems?.length">
       <div class="base-header gallery-header">
-        <img class="specifications-icon" src="/assets/images/model/image-gallery.png">
+        <img class="specifications-icon" src="assets/images/model/image-gallery.png">
         Галерея
       </div>
       <div class="gallery-body">
@@ -36,7 +36,7 @@
 
     <div class="base-section specifications" *ngIf="model.specificationGroups?.length">
       <div class="specifications-header">
-        <img class="specifications-icon" src="/assets/images/model/specification.png">
+        <img class="specifications-icon" src="assets/images/model/specification.png">
         Характеристики
       </div>
       <div class="specifications-body">
