--- a/src/app/components/not-found-page/not-found-page.component.html
+++ b/src/app/components/not-found-page/not-found-page.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-  <img class="page-not-found-img" src="/assets/images/404.png">
+  <img class="page-not-found-img" src="assets/images/404.png">
   <div class="page-not-found-description">
     Извините! Но страница которую вы ищите - не найдена.
     <br>
